# F95Tracker

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json
common/: parser.py
indexer/: main.py  scraper.py  watcher.py
indexer/api/: threads.py
indexer/f95zone/: __init__.py  parser.py  scraper.py  watcher.py
indexer/modules/: cache.py  structs.py
lib/: std.h
lib/bc7e/: CMakeLists.txt  bc7e.h  bc7e_avx.h  bc7e_avx2.h  bc7e_sse2.h  bc7e_sse4.h
lib/dcimgui/: CMakeLists.txt  dcimconfig.h  dcimgui.h  dcimgui_internal.cpp  dcimgui_internal.h
lib/dcimgui/backends/: dcimgui_impl_opengl3.cpp  dcimgui_impl_opengl3.h  dcimgui_impl_sdl3.cpp  dcimgui_impl_sdl3.h
lib/fonts/: CMakeLists.txt  font_custom_mixin.c  font_jetbrainsmono_regular.c  font_karla_bold.c  font_karla_regular.c  font_materialdesignicons_webfont.c  font_notosans_regular.c  fonts.h  mdi.h  mdi.py
lib/glad/: args.txt
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
lib/shlex/: CMakeLists.txt  shlex.cpp  shlex.h
modules/: rpdl.py
python/modules/: db.py  globals.py  utils.py
src/: app.h  globals.h  main.c
src/browser/: browser.c  browser.h
src/db/: db.c  db.h  db_i.h  games.c  games.h  labels.c  labels.h  settings.c  settings.h  table.h  tabs.c  tabs.h
src/game/: enums.c  enums.h  game.c  game.h  types.c  types.h
src/gui/: backend.c  backend.h  fonts.c  fonts.h  gui.c  gui.h  util.c  util.h  window.c  window.h
src/path/: path.c  path.h
src/settings/: enums.c  settings.c  settings.h  types.c  types.h
src/thread/: thread.c  thread.h
src/types/: datetime.h  label.c  label.h  tab.c  tab.h
